# Mira

./: .env.example  .gitignore  README.md  api.py  assistant.py  config.py  main.py  ocr_processor.py  pyproject.toml  requirements.txt  setup.sh  vector_store.py
Docs/: CONTRIBUTING.md  FRONTEND_UPDATE.md  INSTALLATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RESTRUCTURING_SUMMARY.md  SELF_REFLECTION.md  STATUS.md  requirements.txt
backend/: __init__.py  config.py  main.py
backend/api/: routes.py
backend/core/: __init__.py
backend/core/cache/: __init__.py  redis_manager.py
backend/core/document_processing/: __init__.py  pdf_processor.py  text_chunker.py
backend/core/llm/: __init__.py  factory.py
backend/core/vector_store/: __init__.py  manager.py  semantic_search.py
backend/services/: assistant_service.py
backend/utils/: __init__.py  logger.py
data/vector_db/0cf814aa-b529-4cf4-9aeb-6e8c14403374/: index_metadata.pickle
frontend/: .gitignore  README.md  package.json  start-frontend.sh  tsconfig.tsbuildinfo
frontend/app/: enhanced-animations.css  globals-old.css  globals.css  layout.tsx  page-old.tsx  page.tsx
frontend/src/hooks/: useTypingEffect.ts
logs/: README.md
scripts/: start.sh  stop.sh  verify.sh
